--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -248,9 +248,13 @@ button {
         list-style: decimal-leading-zero;
 
         li {
-            border-top: 1px solid $leaderboard--item--border;
-            padding-top: 15px;
             position: relative;
+            margin: 0;
+            padding-top: 15px;
+            padding-bottom: 15px;
+            cursor: pointer;
+            border-top: 1px solid $leaderboard--item--border;
+            transition: background .2s ease;
 
             &:before {
                 border-radius: 30px;
@@ -266,7 +270,6 @@ button {
             }
 
             &.is-in-lead {
-                margin-bottom: 0;
                 padding-bottom: 15px;
 
                 &:before {
@@ -281,6 +284,21 @@ button {
                     margin-top: -1px;
                 }
 
+            }
+
+            &.is-hovering {
+                background-color: #fafafa;
+            }
+
+            &.is-active {
+                background-color: rgba($button--yellow--background, .1);
+                &:before {
+                    background: #444;
+                    border: none;
+                    color: #fff;
+                    font-weight: bold;
+                    left: -10px;
+                }
             }
 
         }
